--- a/RustPlus.Automation/appsettings.json
+++ b/RustPlus.Automation/appsettings.json
@@ -8,6 +8,7 @@
     "BaseLocationX": "",
     "BaseLocationY": "",
     "Radius": "10",
-    "SmartSwitchId": ""
+    "SmartSwitchId": "",
+    "SmartSwitchStateToSet": "false"
   }
 }
